--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+
 language: ruby
 rvm:
-  - 1.27.0
+  - 2.0.0
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0
+env:
+  - DB=sqlite
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake test
